minor alignment fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -150,13 +150,6 @@
       font-size: 28px;
     }
   }
-  i {
-    position: absolute;
-    top: -14px;
-    right: -14px;
-    font-size: 24px;
-    color: #b29600;
-  }
   h4 {
     font-size: 16px;
     font-weight: 900 !important;
